# backgammon_engine

./: LICENSE  README.md  contributing.md
backgammon_engine/: Cargo.toml  monteCarlo.rs
backgammon_engine/src/: backgammoninvariants.rs  backgammonmove.rs  backgammonstate.rs  invariants.rs  lib.rs  state.rs
backgammon_engine/tests/: integration_tests.rs
test_program/: Cargo.toml
test_program/src/: main.rs
