[package]
name = "backgammon_engine"
version = "1.0.0"
edition = "2024"
description = "A Rust library that implements the core game logic and transitions from the game for Backgammon. It models the Markov decision Process for the game of backgammon."
authors = ["joris68"]
license = "MIT"
repository = "https://github.com/joris68/backgammon_engine"
homepage = "https://github.com/joris68/backgammon_engine"
documentation = ""
readme = "README.md"
keywords = ["backgammon", "game", "engine", "ai", "boardgame", "tavla"]
categories = ["game-engines", "algorithms", "simulation", "monte-carlo"]

[dependencies]

