[package]
name = "backgammon_engine"
version = "0.1.0"
edition = "2024"
description = "Backgammon engine in Rust: state representation, legal move generation, and deterministic afterstate transitions for agent/RL development."
authors = ["joris68"]
license = "MIT"
repository = "https://github.com/joris68/backgammon_engine"
homepage = "https://github.com/joris68/backgammon_engine"
documentation = ""
readme = "README.md"
keywords = ["backgammon", "game", "engine", "machine learning", "boardgame", "tavla"]
categories = ["game-engines", "algorithms", "simulation", "monte-carlo", "machine learning"]

[dependencies]

