[package]
name = "backgammon_engine"
version = "0.1.0"
edition = "2024"
description = "Backgammon engine in Rust: state representation, legal move generation, and deterministic afterstate transitions for agent/RL development."
authors = ["joris68"]
license = "MIT"
repository = "https://github.com/joris68/backgammon_engine"
homepage = "https://github.com/joris68/backgammon_engine"
documentation = "https://github.com/joris68/backgammon_engine"
readme = "../README.md"
keywords = ["backgammon", "game", "engine", "reinforcement", "markov"]
categories = ["game_engine", "algorithms", "simulation", "monte_carlo", "machine_learning"]

[dependencies]

